[gd_scene load_steps=6 format=3 uid="uid://xhh85ivvyxph"]

[ext_resource type="Texture2D" uid="uid://ccip7jvju2lo3" path="res://src/managers/match_manager/bases_manager/baseball_diamond.png" id="1_pmsil"]
[ext_resource type="Script" path="res://src/ui/team_select_screen/TeamSelectScreen.gd" id="1_wavl1"]
[ext_resource type="PackedScene" uid="uid://dfafk1vq1i83u" path="res://src/teams/selectable_team/SelectableTeam.tscn" id="3_t0rio"]
[ext_resource type="Script" path="res://src/teams/MonsterTeam.gd" id="4_jhqte"]

[sub_resource type="Resource" id="Resource_x20oy"]
resource_local_to_scene = true
script = ExtResource("4_jhqte")
monster_characters = Array[int]([0, 1, 0, 1])
monster_team_name = 0

[node name="TeamSelectScreen" type="Node2D"]
script = ExtResource("1_wavl1")

[node name="BaseballDiamondTextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 656.0
texture = ExtResource("1_pmsil")
expand_mode = 1
stretch_mode = 4

[node name="SelectableTeamsContainer" type="HBoxContainer" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 400.0
alignment = 1

[node name="SelectableTeam" parent="SelectableTeamsContainer" instance=ExtResource("3_t0rio")]
monster_team = SubResource("Resource_x20oy")
